# sattrack

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  corner-cases.txt  develop.py  orbitpath.py  orbitpath2.py  orbitpath_old.py  orbitpath_old2.py  pyproject.toml  requirements.txt  sat-track.sln  setup.py
docs/: coordinates.md  juliandate.html  juliandate.md
docs/source/: conf.py  index.rst
extensions/sgp4/: sgp4.sln  sgp4.vcxproj  sgp4.vcxproj.filters  sgp42.vcxproj  sgp42.vcxproj.filters
extensions/sgp4/src/: SGP4.cpp  sgp4module.cpp
extensions/sgp42/: sgp42.sln  sgp42.vcxproj
extensions/sgp42/include/: SGP4.h
extensions/sgp42/src/: SGP4.cpp  sgp4module.cpp  tlemodule.cpp
sat-track/: sat-track.pyproj
sat-track/src/: _sgp4.py  anomalies.py  body.py  constants.py  coordinates.py  elements.py  juliandate.py  rotation.py  satellite.py  spacetime.py  tle.py  topos.py
sat-track/src/rotation/: order.py
sat-track/test/: test_rotation.py
src/sattrack/: __init__.py  _coordinates.py  _orbit.py  _sampa.py  _topocentric.py  api.py  config.py  coordinates.py  eclipse.py  exceptions.py  moon.py  orbit.py  sampa.py  sampa_funcs.py  satpass.py  sun.py  test.py  test2.py  tle.py  topocentric.py  topos.py
test/: close.py  test_body.py  test_coordinates.py  test_earth.py  test_eclipse.py  test_elements.py  test_helpers.py  test_juliandate.py  test_orbit.py  test_orbitpath.py  test_passes.py  test_sun.py  test_tle.py  test_topocentric.py
test/resources/: SGP4-VER.TLE  info.txt  response-list.txt  tcppver.out
tests/sgp4/: SGP4-VER.TLE  test_sgp4.py
(+80 files in other folders)
