[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sattrack"
version = "0.3.0"
authors = [
    { name="Quinton Barnes", email="devqbizzle68@gmail.com" }
]
description = "Compute positioning and angle data for satellites in orbit."
readme = "README.md"
license = { file = "LICENCE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pyevspace",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/qbizzle68/sattrack"
"Bug Tracker" = "https://github.com/qbizzle68/sattrack/issues"

[tool.coverage.run]
source = ['src/sattrack']
omit = ['*/api.py']

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "return NotImplemented",
    "pass"
]